--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -10,6 +10,18 @@
     </head>
     <body>
         <div class="container">
+
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="container-fluid">
+                    <a href="/" class="navbar-brand">Superlists</a>
+                    <form action="#" method="POST" class="navbar-form navbar-right">
+                        <span>Enter email to log in:</span>
+                        <input type="text" class="form-control" name="email" />
+                        {% csrf_token %}
+                    </form>
+                </div>
+            </nav>
+
             <div class="row">
                 <div class="col-md-6 offset-md-3 jumbotron">
                     <div class="text-center">
