--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -14,13 +14,27 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container-fluid">
                     <a href="/" class="navbar-brand">Superlists</a>
-                    <form action="#" method="POST" class="navbar-form navbar-right">
+                    <form action="{% url 'send_login_email' %}" method="POST" class="navbar-form navbar-right">
                         <span>Enter email to log in:</span>
                         <input type="text" class="form-control" name="email" />
                         {% csrf_token %}
                     </form>
                 </div>
             </nav>
+
+            {% if messages %}
+                <div class="row">
+                    <div class="col-md-8">
+                        {% for message in messages %}
+                            {% if message.level_tag == 'success' %}
+                                <div class="alert alert-success">{{message}}</div>
+                            {% else %}
+                                <div class="alert alert-warning">{{message}}</div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
 
             <div class="row">
                 <div class="col-md-6 offset-md-3 jumbotron">
