--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -73,8 +73,8 @@
             </div>
 
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    {% block extra-content %}
+                <div class="col-md-6 offset-md-3">
+                    {% block extra_content %}
                     {% endblock %}
                 </div>
             </div>
