--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -74,7 +74,7 @@
 
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    {% block extra-content %}
+                    {% block extra_content %}
                     {% endblock %}
                 </div>
             </div>
